--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         first-time users to learn the website and the entire process of using the tools from start to finish. 
         Memorability is the ability of users to remeber the entire process of using the website. 
         </p>
-        <p> Usability</p>
+        <h3> Usability</h3>
           <p>The website lacks affordances that make using the tool intuitive to first-time users. Instructions 
         are dispersed on the website and not provided in an organized way. The main calendar elements on the 
         website are not responsive to changes in the size of the screen. This makes the calendars difficult 
@@ -46,15 +46,15 @@
           <br>
           <img class="problems" src="assets/usabilityProblem2.jpeg" alt="Original Website State 2">
         </div>
-        <p>Learnability</p>
+        <h3>Learnability</h3>
           <p>The user is exposed to all of the tools on the interface at once which results in an information overload. 
         As a result, users are hindered from learning how to operate the interface correctly. The instructions are 
         also presented in an informal manner that makes it easy to miss and ignore.</p>
-        <p>Memorability</p>
+        <h3>Memorability</h3>
           <p>The process of using the interface is simple and there are not a lot of steps in the entire process.
         However the poor learnability makes it harder to comprehend the entire process so an improvement in 
         learnability could also lead to a higher meorability of users.</p>
-        <p>Accessibility</p>
+        <h3>Accessibility</h3>
           <p>Apart from the three usability guidelines we are also concerned about the accessibility of the website for 
         those that require addittional features to use the website's functionality. The WebAIM Wave assessment showed 
         that there were two input boxes that didn’t have labels or corresponding descriptions of their purpose. This 
@@ -66,7 +66,7 @@
       <h2>Part 2: Visual Redesign</h2>
         <p>To aid my redesing of the website I have created a couple of visual redesigns to help me address the problems
           that I have identified above. </p>
-        <p>Low-fidelity Wireframing</p>
+        <h3>Low-fidelity Wireframing</h3>
           <p>A low-fidelity wireframe is a rough sketch for the layout of my redeisng. I have decided to create 3 wireframes
             each representing one of the three common screen sizes (desktop, mobile, tablet). In the wireframes I have also
             added my own annotations to address the problems I am trying to fix with each new element.
@@ -74,47 +74,47 @@
           <p>For each screen size I have created two wireframes to represent the two states that I am proposing. The initial
             state is a pop-up window that helps the user sign in and the second state is the main webpage with the calendars
             that users can choose their time slots.</p>
-          <p>Low-fidelity wireframe for desktop</p>
+          <h4>Low-fidelity wireframe for desktop</h4>
             <div class="column-img-container">
               <img class="original"src="assets/desktopWireframe1.png" alt="">
               <br>
               <img class="original"src="assets/desktopWireframe2.png" alt="">
             </div>
 
-          <p>Low-fidelity wireframe for mobile</p>
+          <h4>Low-fidelity wireframe for mobile</h4>
           <div class="column-img-container">
             <img class="original"src="assets/mobileWireframe.png" alt="">
           </div>
 
-          <p>Low-fidelity wireframe for tablet</p>
+          <h4>Low-fidelity wireframe for tablet</h4>
           <div class="column-img-container">
             <img class="original"src="assets/tabletWireframe1.png" alt="">
             <br>
             <img class="original"src="assets/tabletWireframe2.png" alt="">
           </div>
 
-        <p>Visual Design Style Guide</p>
+        <h3>Visual Design Style Guide</h3>
           <p>A visual design style guide displays the main colors, typography, and reusable components' different
               states (buttons on hover, click, etc.).</p>
             <div class="column-img-container">
               <img class="original"src="assets/visualDesignGuide.png" alt="">
             </div>
 
-        <p>High-Fidelity Prototyping</p>
+        <h3>High-Fidelity Prototyping</h3>
           <p>High-fidelity prototypes are based on my low-fidelity wireframes I created but is more detailed. I will create
             three different prototypes that is responsive between different screen sizes. In my high-fidelity prototypes
             I have included annotationsof the different elements so that a developer would be able to reproduce them.</p>
-            <p>High-fidelity prototype for desktop</p>
+            <h4>High-fidelity prototype for desktop</h4>
             <div class="column-img-container">
               <img class="original"src="assets/prototypeDesktop1.png" alt="">
               <br>
               <img class="original"src="assets/prototypeDesktop2.png" alt="">
             </div>
-            <p>High-fidelity prototype for mobile</p>
+            <h4>High-fidelity prototype for mobile</h4>
             <div class="column-img-container">
               <img class="original"src="assets/prototypeMobile.png" alt="">
             </div>
-            <p>High-fidelity prototype for tablet</p>
+            <h4>High-fidelity prototype for tablet</h4>
             <div class="column-img-container">
               <img class="original"src="assets/prototypeTablet.png" alt="">
             </div>
