--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <p>I have chosen this website because it is something I have used frequently in the past and 
         didn’t have the best user experience with. </p>
         <p>
-        I have analyzed the website to identify current problems based on three aspects which are usabilit,
+        I have analyzed the website to identify current problems based on three aspects which are usability,
         learnability, and memorability. Usability is how well the website has been designed so that users 
         can easily operate the functions and tools that the website provides. Learnability is the ability of
         first-time users to learn the website and the entire process of using the tools from start to finish. 
@@ -40,7 +40,8 @@
         users and they are extremely hard to select and type text into. Mobile users can’t view both their 
         personal availability and group availability calendars without having to zoom out because the orientation 
         of the calendars is the exact same as desktop view. Once the mobile user zooms out on the calendars 
-        it becomes almost impossible to select slots and operate because the calendars get smaller. </p>
+        it becomes almost impossible to select slots and operate because the calendars get smaller. The images below
+        illustrate the problems with usability that are identified.</p>
         <div class="column-img-container">
           <img class="problems" src="assets/usabilityProblem1.png" alt="Original Website State 1">
           <br>
