--- a/index.html
+++ b/index.html
@@ -4,9 +4,31 @@
     <title>Responsive Redesign</title>
     <script src="app.js" defer></script>
     <link rel="stylesheet" href="styles.css" /> 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>    <link rel="stylesheet" href="styles.css">
   </head>
   <div class="responsive_redesign">
     <body>
+          <!-- Navbar -->
+    <nav class="navbar navbar-expand-md bg-light navbar-light p-1">
+      <div class="container">
+          <a href = "https://slowrabbit216.github.io/finalPortfolio/" class="navbar-brand">Justin Long</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navmenu">
+              <ul class="navbar-nav ms-auto">
+                  <li class="nav-item">
+                      <a href="#aboutme" class="nav-link"> About me</a>
+                  </li>
+                  <li class="nav-item">
+                      <a href="#projects" class="nav-link"> Projects</a>
+                  </li>
+              </ul>
+          </div>
+      </div>
+      
+  </nav>
       <h1>Responsive Redesign</h1>
       <h2>Overview</h2>
         <p>In this section I am practicing the workflow of redesigning a simple website. 
